<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting_vova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greating_vova_view"
        android:textSize="34sp"

        app:layout_constraintBottom_toTopOf="@+id/greeting_kate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/greeting_kate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greating_kate_view"
        android:textSize="34sp"

        app:layout_constraintBottom_toTopOf="@+id/greeting_myself"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_vova" />

    <TextView
        android:id="@+id/greeting_myself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greating_myself_view"
        android:textSize="34sp"

        app:layout_constraintBottom_toTopOf="@+id/greeting_some_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_kate" />

    <TextView

        android:id="@+id/greeting_some_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_input_name_text"
        android:textAlignment="center"
        android:textSize="34sp"

        app:layout_constraintBottom_toTopOf="@+id/greeting_entered_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_myself" />

    <EditText
        android:id="@+id/greeting_entered_name"
        android:layout_width="290dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@+id/entered_name_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_some_one" />

    <Button
        android:id="@+id/entered_name_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_entered_name" />
</androidx.constraintlayout.widget.ConstraintLayout>